gcc/testsuite/rust/rustc/ui/methods/method-call-type-binding.rs
fn main() {
    0.clone::<T = u8>(); // { dg-error ".E0229." "" { target *-*-* } }
}

